sfSandBoxCode/force-app/main/default/objects/HelpDesk__c/HelpDesk__c.object-meta.xml
<CustomObject>
    <label>HelpDesk</label>
    <nameField>
        <label>Ticket Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>HelpDesk</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>