sfSandBoxCode/force-app/main/default/objects/HelpDesk__c/fields/Agent__c.field-meta.xml
<CustomField>
    <fullName>Agent__c</fullName>
    <label>Agent</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Human Resource</fullName>
            </value>
            <value>
                <fullName>ICT HelpDesk</fullName>
            </value>
            <value>
                <fullName>Sanergy Help Desk</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>