sfSandBoxCode/force-app/main/default/objects/HelpDesk__c/fields/Agent_Interactions__c.field-meta.xml
<CustomField>
    <fullName>Agent_Interactions__c</fullName>
    <label>Agent Interactions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>