sfSandBoxCode/force-app/main/default/objects/HelpDesk__c/fields/Closed_time__c.field-meta.xml
<CustomField>
    <fullName>Closed_time__c</fullName>
    <label>Closed time</label>
    <type>DateTime</type>
</CustomField>