sfSandBoxCode/force-app/main/default/objects/HelpDesk__c/fields/Created_time__c.field-meta.xml
<CustomField>
    <fullName>Created_time__c</fullName>
    <label>Created time</label>
    <type>DateTime</type>
</CustomField>