sfSandBoxCode/force-app/main/default/objects/HelpDesk__c/fields/Customer_Interactions__c.field-meta.xml
<CustomField>
    <fullName>Customer_Interactions__c</fullName>
    <label>Customer Interactions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>