sfSandBoxCode/force-app/main/default/objects/HelpDesk__c/fields/Due_by_Time__c.field-meta.xml
<CustomField>
    <fullName>Due_by_Time__c</fullName>
    <label>Due by Time</label>
    <type>DateTime</type>
</CustomField>