sfSandBoxCode/force-app/main/default/objects/HelpDesk__c/fields/First_Response_Status__c.field-meta.xml
<CustomField>
    <fullName>First_Response_Status__c</fullName>
    <label>First Response Status</label>
    <length>20</length>
    <type>Text</type>
</CustomField>