sfSandBoxCode/force-app/main/default/objects/HelpDesk__c/fields/First_Response_Time__c.field-meta.xml
<CustomField>
    <fullName>First_Response_Time__c</fullName>
    <description>First Response Time for ticket</description>
    <label>First Response Time</label>
    <type>DateTime</type>
</CustomField>