sfSandBoxCode/force-app/main/default/objects/HelpDesk__c/fields/Initial_Response_Time__c.field-meta.xml
<CustomField>
    <fullName>Initial_Response_Time__c</fullName>
    <label>Initial Response Time</label>
    <type>DateTime</type>
</CustomField>