sfSandBoxCode/force-app/main/default/objects/HelpDesk__c/fields/Requester_Email__c.field-meta.xml
<CustomField>
    <fullName>Requester_Email__c</fullName>
    <label>Requester Email</label>
    <length>30</length>
    <type>Text</type>
</CustomField>