sfSandBoxCode/force-app/main/default/objects/HelpDesk__c/fields/Resolution_Status__c.field-meta.xml
<CustomField>
    <fullName>Resolution_Status__c</fullName>
    <label>Resolution Status</label>
    <length>20</length>
    <type>Text</type>
</CustomField>