sfSandBoxCode/force-app/main/default/objects/HelpDesk__c/fields/Resolution_Time_in_Hrs__c.field-meta.xml
<CustomField>
    <fullName>Resolution_Time_in_Hrs__c</fullName>
    <label>Resolution Time(in Hrs)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>