sfSandBoxCode/force-app/main/default/objects/HelpDesk__c/fields/Resolved_time__c.field-meta.xml
<CustomField>
    <fullName>Resolved_time__c</fullName>
    <label>Resolved time</label>
    <type>DateTime</type>
</CustomField>