sfSandBoxCode/force-app/main/default/objects/HelpDesk__c/fields/Source_Portal__c.field-meta.xml
<CustomField>
    <fullName>Source_Portal__c</fullName>
    <label>Source Portal</label>
    <length>80</length>
    <type>Text</type>
</CustomField>