sfSandBoxCode/force-app/main/default/objects/HelpDesk__c/fields/Survey_Result__c.field-meta.xml
<CustomField>
    <fullName>Survey_Result__c</fullName>
    <label>Survey Result</label>
    <length>30</length>
    <type>Text</type>
</CustomField>