sfSandBoxCode/force-app/main/default/objects/HelpDesk__c/fields/Ticket_Id__c.field-meta.xml
<CustomField>
    <fullName>Ticket_Id__c</fullName>
    <description>Helpdesk Ticket Id</description>
    <label>Ticket Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>