sfSandBoxCode/force-app/main/default/objects/HelpDesk__c/fields/Time_Tracked__c.field-meta.xml
<CustomField>
    <fullName>Time_Tracked__c</fullName>
    <label>Time Tracked</label>
    <type>DateTime</type>
</CustomField>